Fix gamelist wrapping

--- a/src/routes/index/components/openGame/OpenGame.module.css
+++ b/src/routes/index/components/openGame/OpenGame.module.css
@@ -1,8 +1,8 @@
 .gameItem {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  padding: 0.3rem;
+  flex-wrap: nowrap;
+  padding: 0.2rem 0.3rem;
   vertical-align: center;
   align-items: center;
   justify-content: space-between;
@@ -12,7 +12,7 @@
   left: 0;
   background: transparent;
   border-radius: var(--border-radius);
-  gap: 0.5rem;
+  gap: 0.3rem;
 
   &:hover {
     left: 0.3rem;
@@ -28,14 +28,15 @@
 
 .description {
   flex: 1;
-  min-width: 150px;
+  min-width: 80px;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0.25rem;
+  padding: 0.1rem;
   word-wrap: break-word;
   overflow-wrap: break-word;
+  font-size: 0.85em;
 }
 
 .formatName {
@@ -44,7 +45,7 @@
 }
 
 img {
-  max-height: 3em;
+  max-height: 2.2em;
   flex-shrink: 0;
 }
 
